testdata/invalid/missing_semi.pr
// Missing semicolons on statements.
main() {
  Int x = 1
  Int y = 2
}
